# gentoo-functions

./: .gitignore  AUTHORS  Makefile  consoletype.1  consoletype.c  ecma48-cpr.c  functions.sh  functions.sh.in  headers.h  meson.build  meson_options.txt  shquote.c  test-functions
functions/: experimental.sh  portage.sh  rc.sh  tty.sh
refs/heads/: master
refs/tags/: 0.15  0.16  0.18  0.19  gentoo-functions-1.0  gentoo-functions-1.1  gentoo-functions-1.2  gentoo-functions-1.3  gentoo-functions-1.4  gentoo-functions-1.5  gentoo-functions-1.6  gentoo-functions-1.7  gentoo-functions-1.7.1  gentoo-functions-1.7.2  gentoo-functions-1.7.3  gentoo-functions-1.7.4  gentoo-functions-1.7.5
